style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');

html{
  scroll-behavior: smooth;
}

html, body{
  height: 100%;
  width: 100%;
  font-family: 'Poppins', sans-serif;
  color: #222;
}
.navbar{
  padding: .8rem;
}
.navbar-nav li{
  padding-right: 20px;
}
.nav-link{
  font-size: 1.1em !important;
}

.carousel-inner img{
  width: 100%;
  height: 100%;
}
.carousel-caption{
  position: absolute;
  top: 50%;
  transform: translateY(-50);
}
.carousel-caption h1{
  font-size: 500%;
  text-transform: uppercase;
  text-shadow: 1px 1px 15px #000;
}

.img-fluid{
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

.carousel-caption h3{
  font-size: 200%;
  font-weight: 500;
  text-shadow: 1px 1px 10px #000;
  padding-bottom: 1rem;
}
.jumbotron{
  padding: 1rem;
  border-radius: 0;
}
.padding{
  padding-bottom: 2rem;
}
.welcome{
  width: 75%;
  margin: 0 auto;
  padding-top: 2rem;
}
.welcome hr{
  border-top: 2px solid #b4b4b4;
  width: 95%;
  margin-top: .3rem;
  margin-bottom: 3rem;
}
.fa-forumbee{
  color: #ffff00;
}
.fa-leaf{
  color: #2d572c;
}
.fa-smile{
  color: #ffa500;
}
.fa-code{
  font-size: 4em;
  margin: 1rem;
}
.fa-bug{
  font-size: 4em;
  margin: 1rem;
}
.fa-code-branch{
  font-size: 4em;
  margin: 1rem;
}
.social a{
  font-size: 4.5em;
  padding: 8rem;
}
.fa-twitter{
  color: #00aced;
}
.fa-instagram{
  color: #517fa4;
}
.fa-facebook:hover,
.fa-twitter:hover,
.fa-instagram:hover{
  color: #d5d5d5;
}

.fa-pastafarianism{
  font-size: 4em;
  margin: 1rem;
}

.fa-user-astronaut{
  font-size: 4em;
  margin: 1rem;
}


footer{
  background-color: #3f3f3f;
  color: #d5d5d5;
  padding-top: 2rem;
}
hr.light{
  border-top: 1px solid #d5d5d5;
  width: 75%;
  margin-top: .8rem;
  margin-bottom: 1rem;
}
footer a{
  color: #d5d5d5;
}
hr.light-100{
  border-top: 1px solid #d5d5d5;
  width: 100%;
  margin-top: .8rem;
  margin-bottom: 1rem;
}
.form-control{
  width: 14%;
}
.buycont > *{
  display: inline-block;
}





/*---Media Queries --*/
@media (max-width: 992px) {
    .social a{
      font-size: 4em;
      padding: 2rem;
    }
  }
@media (max-width: 768px) {
  .carousel-caption{
    top: 45%;
  }
  .carousel-caption h1{
    font-size: 350%;
  }
  .carousel-caption h3{
    font-size: 140%;
    font-weight: 400;
    padding-bottom: .2rem;
  }
  .carousel-caption .btn{
    font-size: 95%;
    padding: 8px 14px;
  }
  .display-4 {
    font-size: 200%;
  }
  .social a{
    font-size: 2.5em;
    padding: 1.2rem;
  }
}
@media (max-width: 576px) {
  .carousel-caption{
    top: 40%;
  }
  .carousel-caption h1{
    font-size: 250%;
  }
  .carousel-caption h3{
    font-size: 110%;
  }
  .carousel-caption .btn{
    font-size: 90%;
    padding: 4px 8px;
  }
  .carousel-indicators{
    display: none;
  }
  .display-4 {
    font-size: 160%;
  }
  .social a{
    font-size: 2em;
    padding: .7rem;
  }

}


/*---Firefox Bug Fix --*/
.carousel-item {
  transition: -webkit-transform 0.5s ease;
  transition: transform 0.5s ease;
  transition: transform 0.5s ease, -webkit-transform 0.5s ease;
  -webkit-backface-visibility: visible;
  backface-visibility: visible;
}
/*--- Fixed Background Image --*/
figure {
  position: relative;
  width: 100%;
  height: 60%;
  margin: 0!important;
}
.fixed-wrap {
  clip: rect(0, auto, auto, 0);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
#fixed {
  background-image: url('img/mac.png');
  position: fixed;
  display: block;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-position: center center;
  -webkit-transform: translateZ(0);
          transform: translateZ(0);
  will-change: transform;
}
/*--- Bootstrap Padding Fix --*/
[class*="col-"] {
    padding: 1rem;
}





/*
Extra small (xs) devices (portrait phones, less than 576px)
No media query since this is the default in Bootstrap

Small (sm) devices (landscape phones, 576px and up)
@media (min-width: 576px) { ... }

Medium (md) devices (tablets, 768px and up)
@media (min-width: 768px) { ... }

Large (lg) devices (desktops, 992px and up)
@media (min-width: 992px) { ... }

Extra (xl) large devices (large desktops, 1200px and up)
@media (min-width: 1200px) { ... }
*/

